[tool.poetry]
name = "comp100-2021f-ps0-er-mustafa"
version = "0.1.0"
description = ""
authors = ["MUSTAFAER2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
string-color = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
